deployment-nginx-hello.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-hello
  labels:
    app: nginx-hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-hello
  template:
    metadata:
      labels:
        app: nginx-hello
      annotations:
        kubernetes.io/psp: privileged      
    spec:
      containers:
      - name: nginx-hello
        image: nginxdemos/hello:latest
        ports:
        - containerPort: 80
